--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,7 @@ branches:
     - master
     # having another branch lets us force-push tests here without spamming master
     - travis-test
+    - clang_format
 
 env:
   global:
