--- a/renderdoccmd/CMakeLists.txt
+++ b/renderdoccmd/CMakeLists.txt
@@ -75,7 +75,8 @@ if(ANDROID)
                       DEPENDS ${APK_FILE}
                       DEPENDS ${KEYSTORE})
 
-    set(JARFILE "$ENV{ANDROID_SDK}/platforms/android-23/android.jar")
+    set(ANDROID_JAR "$ENV{ANDROID_SDK}/platforms/android-23/android.jar")
+    set(RT_JAR "$ENV{JAVA_HOME}/jre/lib/rt.jar")
     add_custom_command(OUTPUT ${APK_FILE}
                        DEPENDS renderdoc
                        DEPENDS renderdoccmd
@@ -86,12 +87,12 @@ if(ANDROID)
                        COMMAND ${CMAKE_COMMAND} -E make_directory bin
                        COMMAND ${CMAKE_COMMAND} -E copy $<TARGET_FILE:renderdoc> libs/lib/${ANDROID_ABI}/libVkLayer_GLES_RenderDoc.so
                        COMMAND ${CMAKE_COMMAND} -E copy $<TARGET_FILE:renderdoccmd> libs/lib/${ANDROID_ABI}/$<TARGET_FILE_NAME:renderdoccmd>
-                       COMMAND aapt package -f -m -S res -J src -M AndroidManifest.xml -I ${JARFILE}
-                       COMMAND javac -d ./obj -source 1.7 -target 1.7 -bootclasspath $ENV{JAVA_HOME}/jre/lib/rt.jar -classpath ${JARFILE}:obj -sourcepath src src/org/renderdoc/renderdoccmd/*.java
+                       COMMAND aapt package -f -m -S res -J src -M AndroidManifest.xml -I ${ANDROID_JAR}
+                       COMMAND javac -d ./obj -source 1.7 -target 1.7 -bootclasspath ${RT_JAR} -classpath ${ANDROID_JAR}:obj -sourcepath src src/org/renderdoc/renderdoccmd/*.java
                        COMMAND dx --dex --output=bin/classes.dex ./obj
-                       COMMAND aapt package -f -M AndroidManifest.xml -S res -I ${JARFILE} -F bin/RenderDocCmd-unaligned.apk bin libs
+                       COMMAND aapt package -f -M AndroidManifest.xml -S res -I ${ANDROID_JAR} -F bin/RenderDocCmd-unaligned.apk bin libs
                        COMMAND zipalign -f 4 bin/RenderDocCmd-unaligned.apk bin/RenderDocCmd.apk
-                       COMMAND apksigner sign --ks ${KEYSTORE} --ks-pass pass:android --key-pass pass:android --ks-key-alias androiddebugkey bin/RenderDocCmd.apk 
+                       COMMAND apksigner sign --ks ${KEYSTORE} --ks-pass pass:android --key-pass pass:android --ks-key-alias androiddebugkey bin/RenderDocCmd.apk
                        COMMAND ${CMAKE_COMMAND} -E copy bin/RenderDocCmd.apk ${APK_FILE})
 
 endif()
